qt/gen_qmenu.h

typedef struct QAction QAction;
typedef struct QActionEvent QActionEvent;
typedef struct QEvent QEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMenu QMenu;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QMenu* QMenu_new(QWidget* parent);
QMenu* QMenu_new2();
QMenu* QMenu_new3(struct miqt_string title);
QMenu* QMenu_new4(struct miqt_string title, QWidget* parent);
QMetaObject* QMenu_metaObject(const QMenu* self);
void* QMenu_metacast(QMenu* self, const char* param1);
int QMenu_metacall(QMenu* self, int param1, int param2, void** param3);
struct miqt_string QMenu_tr(const char* s);
struct miqt_string QMenu_trUtf8(const char* s);
QAction* QMenu_addAction(QMenu* self, struct miqt_string text);
QAction* QMenu_addAction2(QMenu* self, QIcon* icon, struct miqt_string text);
QAction* QMenu_addMenu(QMenu* self, QMenu* menu);
QMenu* QMenu_addMenuWithTitle(QMenu* self, struct miqt_string title);
QMenu* QMenu_addMenu2(QMenu* self, QIcon* icon, struct miqt_string title);
QAction* QMenu_addSeparator(QMenu* self);
QAction* QMenu_addSection(QMenu* self, struct miqt_string text);
QAction* QMenu_addSection2(QMenu* self, QIcon* icon, struct miqt_string text);
QAction* QMenu_insertMenu(QMenu* self, QAction* before, QMenu* menu);
QAction* QMenu_insertSeparator(QMenu* self, QAction* before);
QAction* QMenu_insertSection(QMenu* self, QAction* before, struct miqt_string text);
QAction* QMenu_insertSection2(QMenu* self, QAction* before, QIcon* icon, struct miqt_string text);
bool QMenu_isEmpty(const QMenu* self);
void QMenu_clear(QMenu* self);
void QMenu_setTearOffEnabled(QMenu* self, bool tearOffEnabled);
bool QMenu_isTearOffEnabled(const QMenu* self);
bool QMenu_isTearOffMenuVisible(const QMenu* self);
void QMenu_showTearOffMenu(QMenu* self);
void QMenu_showTearOffMenuWithPos(QMenu* self, QPoint* pos);
void QMenu_hideTearOffMenu(QMenu* self);
void QMenu_setDefaultAction(QMenu* self, QAction* defaultAction);
QAction* QMenu_defaultAction(const QMenu* self);
void QMenu_setActiveAction(QMenu* self, QAction* act);
QAction* QMenu_activeAction(const QMenu* self);
void QMenu_popup(QMenu* self, QPoint* pos);
QAction* QMenu_exec(QMenu* self);
QAction* QMenu_execWithPos(QMenu* self, QPoint* pos);
QAction* QMenu_exec2(struct miqt_array /* of QAction* */  actions, QPoint* pos);
QSize* QMenu_sizeHint(const QMenu* self);
QRect* QMenu_actionGeometry(const QMenu* self, QAction* param1);
QAction* QMenu_actionAt(const QMenu* self, QPoint* param1);
QAction* QMenu_menuAction(const QMenu* self);
struct miqt_string QMenu_title(const QMenu* self);
void QMenu_setTitle(QMenu* self, struct miqt_string title);
QIcon* QMenu_icon(const QMenu* self);
void QMenu_setIcon(QMenu* self, QIcon* icon);
void QMenu_setNoReplayFor(QMenu* self, QWidget* widget);
bool QMenu_separatorsCollapsible(const QMenu* self);
void QMenu_setSeparatorsCollapsible(QMenu* self, bool collapse);
bool QMenu_toolTipsVisible(const QMenu* self);
void QMenu_setToolTipsVisible(QMenu* self, bool visible);
void QMenu_aboutToShow(QMenu* self);
void QMenu_connect_aboutToShow(QMenu* self, intptr_t slot);
void QMenu_aboutToHide(QMenu* self);
void QMenu_connect_aboutToHide(QMenu* self, intptr_t slot);
void QMenu_triggered(QMenu* self, QAction* action);
void QMenu_connect_triggered(QMenu* self, intptr_t slot);
void QMenu_hovered(QMenu* self, QAction* action);
void QMenu_connect_hovered(QMenu* self, intptr_t slot);
struct miqt_string QMenu_tr2(const char* s, const char* c);
struct miqt_string QMenu_tr3(const char* s, const char* c, int n);
struct miqt_string QMenu_trUtf82(const char* s, const char* c);
struct miqt_string QMenu_trUtf83(const char* s, const char* c, int n);
void QMenu_popup2(QMenu* self, QPoint* pos, QAction* at);
QAction* QMenu_exec22(QMenu* self, QPoint* pos, QAction* at);
QAction* QMenu_exec3(struct miqt_array /* of QAction* */  actions, QPoint* pos, QAction* at);
QAction* QMenu_exec4(struct miqt_array /* of QAction* */  actions, QPoint* pos, QAction* at, QWidget* parent);
bool QMenu_override_virtual_metacall(void* self, intptr_t slot);
int QMenu_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QMenu_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QMenu_virtualbase_sizeHint(const void* self);
bool QMenu_override_virtual_changeEvent(void* self, intptr_t slot);
void QMenu_virtualbase_changeEvent(void* self, QEvent* param1);
bool QMenu_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QMenu_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);
bool QMenu_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QMenu_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* param1);
bool QMenu_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QMenu_virtualbase_mousePressEvent(void* self, QMouseEvent* param1);
bool QMenu_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QMenu_virtualbase_mouseMoveEvent(void* self, QMouseEvent* param1);
bool QMenu_override_virtual_wheelEvent(void* self, intptr_t slot);
void QMenu_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
bool QMenu_override_virtual_enterEvent(void* self, intptr_t slot);
void QMenu_virtualbase_enterEvent(void* self, QEvent* param1);
bool QMenu_override_virtual_leaveEvent(void* self, intptr_t slot);
void QMenu_virtualbase_leaveEvent(void* self, QEvent* param1);
bool QMenu_override_virtual_hideEvent(void* self, intptr_t slot);
void QMenu_virtualbase_hideEvent(void* self, QHideEvent* param1);
bool QMenu_override_virtual_paintEvent(void* self, intptr_t slot);
void QMenu_virtualbase_paintEvent(void* self, QPaintEvent* param1);
bool QMenu_override_virtual_actionEvent(void* self, intptr_t slot);
void QMenu_virtualbase_actionEvent(void* self, QActionEvent* param1);
bool QMenu_override_virtual_timerEvent(void* self, intptr_t slot);
void QMenu_virtualbase_timerEvent(void* self, QTimerEvent* param1);
bool QMenu_override_virtual_event(void* self, intptr_t slot);
bool QMenu_virtualbase_event(void* self, QEvent* param1);
bool QMenu_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QMenu_virtualbase_focusNextPrevChild(void* self, bool next);
bool QMenu_override_virtual_devType(void* self, intptr_t slot);
int QMenu_virtualbase_devType(const void* self);
bool QMenu_override_virtual_setVisible(void* self, intptr_t slot);
void QMenu_virtualbase_setVisible(void* self, bool visible);
bool QMenu_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QMenu_virtualbase_minimumSizeHint(const void* self);
bool QMenu_override_virtual_heightForWidth(void* self, intptr_t slot);
int QMenu_virtualbase_heightForWidth(const void* self, int param1);
bool QMenu_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QMenu_virtualbase_hasHeightForWidth(const void* self);
bool QMenu_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QMenu_virtualbase_paintEngine(const void* self);
bool QMenu_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QMenu_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
void QMenu_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);