qt/gen_qmenu.nim


proc fcQMenu_new(parent: pointer): ptr cQMenu {.importc: "QMenu_new".}
proc fcQMenu_new2(): ptr cQMenu {.importc: "QMenu_new2".}
proc fcQMenu_new3(title: struct_miqt_string): ptr cQMenu {.importc: "QMenu_new3".}
proc fcQMenu_new4(title: struct_miqt_string, parent: pointer): ptr cQMenu {.importc: "QMenu_new4".}
proc fcQMenu_metaObject(self: pointer, ): pointer {.importc: "QMenu_metaObject".}
proc fcQMenu_metacast(self: pointer, param1: cstring): pointer {.importc: "QMenu_metacast".}
proc fcQMenu_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QMenu_metacall".}
proc fcQMenu_tr(s: cstring): struct_miqt_string {.importc: "QMenu_tr".}
proc fcQMenu_trUtf8(s: cstring): struct_miqt_string {.importc: "QMenu_trUtf8".}
proc fcQMenu_addAction(self: pointer, text: struct_miqt_string): pointer {.importc: "QMenu_addAction".}
proc fcQMenu_addAction2(self: pointer, icon: pointer, text: struct_miqt_string): pointer {.importc: "QMenu_addAction2".}
proc fcQMenu_addMenu(self: pointer, menu: pointer): pointer {.importc: "QMenu_addMenu".}
proc fcQMenu_addMenuWithTitle(self: pointer, title: struct_miqt_string): pointer {.importc: "QMenu_addMenuWithTitle".}
proc fcQMenu_addMenu2(self: pointer, icon: pointer, title: struct_miqt_string): pointer {.importc: "QMenu_addMenu2".}
proc fcQMenu_addSeparator(self: pointer, ): pointer {.importc: "QMenu_addSeparator".}
proc fcQMenu_addSection(self: pointer, text: struct_miqt_string): pointer {.importc: "QMenu_addSection".}
proc fcQMenu_addSection2(self: pointer, icon: pointer, text: struct_miqt_string): pointer {.importc: "QMenu_addSection2".}
proc fcQMenu_insertMenu(self: pointer, before: pointer, menu: pointer): pointer {.importc: "QMenu_insertMenu".}
proc fcQMenu_insertSeparator(self: pointer, before: pointer): pointer {.importc: "QMenu_insertSeparator".}
proc fcQMenu_insertSection(self: pointer, before: pointer, text: struct_miqt_string): pointer {.importc: "QMenu_insertSection".}
proc fcQMenu_insertSection2(self: pointer, before: pointer, icon: pointer, text: struct_miqt_string): pointer {.importc: "QMenu_insertSection2".}
proc fcQMenu_isEmpty(self: pointer, ): bool {.importc: "QMenu_isEmpty".}
proc fcQMenu_clear(self: pointer, ): void {.importc: "QMenu_clear".}
proc fcQMenu_setTearOffEnabled(self: pointer, tearOffEnabled: bool): void {.importc: "QMenu_setTearOffEnabled".}
proc fcQMenu_isTearOffEnabled(self: pointer, ): bool {.importc: "QMenu_isTearOffEnabled".}
proc fcQMenu_isTearOffMenuVisible(self: pointer, ): bool {.importc: "QMenu_isTearOffMenuVisible".}
proc fcQMenu_showTearOffMenu(self: pointer, ): void {.importc: "QMenu_showTearOffMenu".}
proc fcQMenu_showTearOffMenuWithPos(self: pointer, pos: pointer): void {.importc: "QMenu_showTearOffMenuWithPos".}
proc fcQMenu_hideTearOffMenu(self: pointer, ): void {.importc: "QMenu_hideTearOffMenu".}
proc fcQMenu_setDefaultAction(self: pointer, defaultAction: pointer): void {.importc: "QMenu_setDefaultAction".}
proc fcQMenu_defaultAction(self: pointer, ): pointer {.importc: "QMenu_defaultAction".}
proc fcQMenu_setActiveAction(self: pointer, act: pointer): void {.importc: "QMenu_setActiveAction".}
proc fcQMenu_activeAction(self: pointer, ): pointer {.importc: "QMenu_activeAction".}
proc fcQMenu_popup(self: pointer, pos: pointer): void {.importc: "QMenu_popup".}
proc fcQMenu_exec(self: pointer, ): pointer {.importc: "QMenu_exec".}
proc fcQMenu_execWithPos(self: pointer, pos: pointer): pointer {.importc: "QMenu_execWithPos".}
proc fcQMenu_exec2(actions: struct_miqt_array, pos: pointer): pointer {.importc: "QMenu_exec2".}
proc fcQMenu_sizeHint(self: pointer, ): pointer {.importc: "QMenu_sizeHint".}
proc fcQMenu_actionGeometry(self: pointer, param1: pointer): pointer {.importc: "QMenu_actionGeometry".}
proc fcQMenu_actionAt(self: pointer, param1: pointer): pointer {.importc: "QMenu_actionAt".}
proc fcQMenu_menuAction(self: pointer, ): pointer {.importc: "QMenu_menuAction".}
proc fcQMenu_title(self: pointer, ): struct_miqt_string {.importc: "QMenu_title".}
proc fcQMenu_setTitle(self: pointer, title: struct_miqt_string): void {.importc: "QMenu_setTitle".}
proc fcQMenu_icon(self: pointer, ): pointer {.importc: "QMenu_icon".}
proc fcQMenu_setIcon(self: pointer, icon: pointer): void {.importc: "QMenu_setIcon".}
proc fcQMenu_setNoReplayFor(self: pointer, widget: pointer): void {.importc: "QMenu_setNoReplayFor".}
proc fcQMenu_separatorsCollapsible(self: pointer, ): bool {.importc: "QMenu_separatorsCollapsible".}
proc fcQMenu_setSeparatorsCollapsible(self: pointer, collapse: bool): void {.importc: "QMenu_setSeparatorsCollapsible".}
proc fcQMenu_toolTipsVisible(self: pointer, ): bool {.importc: "QMenu_toolTipsVisible".}
proc fcQMenu_setToolTipsVisible(self: pointer, visible: bool): void {.importc: "QMenu_setToolTipsVisible".}
proc fcQMenu_aboutToShow(self: pointer, ): void {.importc: "QMenu_aboutToShow".}
proc fQMenu_connect_aboutToShow(self: pointer, slot: int) {.importc: "QMenu_connect_aboutToShow".}
proc fcQMenu_aboutToHide(self: pointer, ): void {.importc: "QMenu_aboutToHide".}
proc fQMenu_connect_aboutToHide(self: pointer, slot: int) {.importc: "QMenu_connect_aboutToHide".}
proc fcQMenu_triggered(self: pointer, action: pointer): void {.importc: "QMenu_triggered".}
proc fQMenu_connect_triggered(self: pointer, slot: int) {.importc: "QMenu_connect_triggered".}
proc fcQMenu_hovered(self: pointer, action: pointer): void {.importc: "QMenu_hovered".}
proc fQMenu_connect_hovered(self: pointer, slot: int) {.importc: "QMenu_connect_hovered".}
proc fcQMenu_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMenu_tr2".}
proc fcQMenu_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMenu_tr3".}
proc fcQMenu_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QMenu_trUtf82".}
proc fcQMenu_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMenu_trUtf83".}
proc fcQMenu_popup2(self: pointer, pos: pointer, at: pointer): void {.importc: "QMenu_popup2".}
proc fcQMenu_exec22(self: pointer, pos: pointer, at: pointer): pointer {.importc: "QMenu_exec22".}
proc fcQMenu_exec3(actions: struct_miqt_array, pos: pointer, at: pointer): pointer {.importc: "QMenu_exec3".}
proc fcQMenu_exec4(actions: struct_miqt_array, pos: pointer, at: pointer, parent: pointer): pointer {.importc: "QMenu_exec4".}
proc fQMenu_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QMenu_virtualbase_metacall".}
proc fcQMenu_override_virtual_metacall(self: pointer, slot: int) {.importc: "QMenu_override_virtual_metacall".}
proc fQMenu_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QMenu_virtualbase_sizeHint".}
proc fcQMenu_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QMenu_override_virtual_sizeHint".}
proc fQMenu_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_changeEvent".}
proc fcQMenu_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_changeEvent".}
proc fQMenu_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_keyPressEvent".}
proc fcQMenu_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_keyPressEvent".}
proc fQMenu_virtualbase_mouseReleaseEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_mouseReleaseEvent".}
proc fcQMenu_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_mouseReleaseEvent".}
proc fQMenu_virtualbase_mousePressEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_mousePressEvent".}
proc fcQMenu_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_mousePressEvent".}
proc fQMenu_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_mouseMoveEvent".}
proc fcQMenu_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_mouseMoveEvent".}
proc fQMenu_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_wheelEvent".}
proc fcQMenu_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_wheelEvent".}
proc fQMenu_virtualbase_enterEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_enterEvent".}
proc fcQMenu_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_enterEvent".}
proc fQMenu_virtualbase_leaveEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_leaveEvent".}
proc fcQMenu_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_leaveEvent".}
proc fQMenu_virtualbase_hideEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_hideEvent".}
proc fcQMenu_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_hideEvent".}
proc fQMenu_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_paintEvent".}
proc fcQMenu_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_paintEvent".}
proc fQMenu_virtualbase_actionEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_actionEvent".}
proc fcQMenu_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_actionEvent".}
proc fQMenu_virtualbase_timerEvent(self: pointer, param1: pointer): void{.importc: "QMenu_virtualbase_timerEvent".}
proc fcQMenu_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_timerEvent".}
proc fQMenu_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QMenu_virtualbase_event".}
proc fcQMenu_override_virtual_event(self: pointer, slot: int) {.importc: "QMenu_override_virtual_event".}
proc fQMenu_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QMenu_virtualbase_focusNextPrevChild".}
proc fcQMenu_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QMenu_override_virtual_focusNextPrevChild".}
proc fQMenu_virtualbase_devType(self: pointer, ): cint{.importc: "QMenu_virtualbase_devType".}
proc fcQMenu_override_virtual_devType(self: pointer, slot: int) {.importc: "QMenu_override_virtual_devType".}
proc fQMenu_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QMenu_virtualbase_setVisible".}
proc fcQMenu_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QMenu_override_virtual_setVisible".}
proc fQMenu_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QMenu_virtualbase_minimumSizeHint".}
proc fcQMenu_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QMenu_override_virtual_minimumSizeHint".}
proc fQMenu_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QMenu_virtualbase_heightForWidth".}
proc fcQMenu_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QMenu_override_virtual_heightForWidth".}
proc fQMenu_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QMenu_virtualbase_hasHeightForWidth".}
proc fcQMenu_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QMenu_override_virtual_hasHeightForWidth".}
proc fQMenu_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QMenu_virtualbase_paintEngine".}
proc fcQMenu_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QMenu_override_virtual_paintEngine".}
proc fQMenu_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_mouseDoubleClickEvent".}
proc fcQMenu_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QMenu_override_virtual_mouseDoubleClickEvent".}
proc fQMenu_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QMenu_virtualbase_keyReleaseEvent".}
